# ASimpleNote

./: Cargo.toml
src/: handler.rs  main.rs  notes.rs  routes.rs  server_config.rs  server_error.rs  utils.rs
