[package]
name = "note_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.9.0"
chrono = { version = "0.4.39", features = ["serde"] }
config = "0.15.4"
dotenvy = "0.15.7"
env_logger = "0.11.6"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
thiserror = "2.0.9"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
